# WCM

./: 1_add_returns.sh  2_run_train.sh  3_run_eval.sh  4_gen_video.sh  LICENSE  README.md  h5_to_lerobot.sh  pyproject.toml  run_eval_8gpu.sh  run_train_8gpu.sh  run_wcm.sh
assets/label/: success_labels_liberoplus.json
configs/: train_8gpu.yaml
episode_value_video/: README.md  __init__.py  cli.py  curves.py  demo.py  images.py  overlay.py  pipeline.py  pyproject.toml  render.py  requirements.txt  run_value_video.sh  sources.py  video_io.py
episode_value_video/tests/: __init__.py  test_cli.py  test_curves.py  test_images.py  test_overlay.py  test_render_pipeline.py  test_sources_and_alignment.py
scripts/: add_returns_to_lerobot.py  convert_lerobot_v16_to_v20_local.py  convert_lerobot_v20_to_v21_local.py  convert_lerobot_v21_to_v30_local.py  h5_to_lerobot.py  make_success_labels.py
tests/: test_action_normalization.py  test_config.py  test_data_split.py  test_distributed_sampler.py  test_episode_curves.py  test_h5_to_lerobot.py  test_lerobot_conversion.py  test_metrics.py  test_model_action_isolation.py  test_public_contract.py  test_return_generation.py  test_rollout_contract.py
world_critic/: __init__.py  checkpoint.py  config.py  curves.py  data.py  distributed.py  evaluate.py  inspect_batch.py  metrics.py  model.py  train.py  training.py
